# meditations-rag

./: .dockerignore  .env.example  .env.prod  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: deploy-cloudrun.yml
docs/: RAG_PIPELINE.md  RETRIEVAL_SERVICE.md  metadata_extraction.md
notebooks/: 01-test.ipynb
scripts/: create_indexes.py  ingest.py
src/meditations_rag/: __init__.py  main.py
src/meditations_rag/api/: dependencies.py  limiter.py  main.py  security.py
src/meditations_rag/api/routers/: agentic.py  health.py  rag.py
src/meditations_rag/api/schemas/: rag.py
src/meditations_rag/api/static/: index.html  script.js  style.css
src/meditations_rag/config/: __init__.py  app.py  base.py  llm.py  logger.py  logging.py  rag.py  settings.py  vectordb.py
src/meditations_rag/core/: __init__.py  chunk_embedding.py  exceptions.py  rate_limiter.py
src/meditations_rag/core/chunk_embedding/: __init__.py
src/meditations_rag/core/chunk_embeding/: __init__.py
src/meditations_rag/core/embedding/: __init__.py  base.py  gemini.py  local_embedding.py  openai.py
src/meditations_rag/core/llm/: __init__.py  base.py  base_openai.py  gemini.py  local_llm.py  openai.py  openrouter.py
src/meditations_rag/pipelines/: __init__.py  agentic_rag.py  ingest.py  langgraph_rag.py  rag.py
src/meditations_rag/services/: __init__.py  chunker.py  guardrail.py  input_validator.py  loader.py  metadata.py  retrieval.py
src/meditations_rag/services/vector_store/: __init__.py  embedding_service.py  qdrant_store.py
