[project]
name = "meditations-rag"
version = "0.1.0"
description = "RAG system for Meditations by Marcus Aurelius"
readme = "README.md"
authors = [
    { name = "Mrudhuhas", email = "mrudhuhas@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "llama-index>=0.14.8",
]

[project.scripts]
meditations-rag = "meditations_rag:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
