[project]
name = "meditations-rag"
version = "0.1.0"
description = "RAG system for Meditations by Marcus Aurelius"
readme = "README.md"
authors = [
    { name = "Mrudhuhas", email = "mrudhuhas@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.26.6",
    "llama-index-embeddings-google-genai>=0.3.1",
    "llama-index-embeddings-openai>=0.5.1",
    "llama-index>=0.14.8",
    "llama-index-readers-file>=0.5.4",
    "tenacity>=8.0.0",
    "qdrant-client>=1.16.0",
    "pyrate-limiter>=3.9.0",
    "fastapi>=0.121.2",
    "uvicorn>=0.38.0",
]

[project.scripts]
meditations-rag = "meditations_rag:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
